# The-Powder-Toy

./: .clang-tidy  .gitattributes  .gitignore  .powder.c.swo  .travis.yml  CHNG.cpp  CLAUDE.md  CMakeLists.txt  Changelog  Changelog.txt  Changes.txt  Element.txt  Iodizon's Mod.sln  Iodizon's Mod.vcxproj.filters  LSNS.cpp  MTHN.cpp  Makefile  Merbo's Mod.sln  Merbo's Mod.vcxproj  Merbo's Mod.vcxproj.filters  New branch.bat  PowderToy++.files  PowderToy++.includes  Project generator.py  README  README.md  SConscript  SConstruct  SDLMain.m  Style.cpp  Style.h  TODO  TODO.md  TPT-cn.sln  TPT-cn.vcxproj  TPT-cn.vcxproj.filters  Test.pro  UpgradeLog.XML  VSNS.cpp  addzip.py  (+64 more)
android/: AndroidManifest.template.xml  AndroidManifest.xml  PowderActivity.template.java  align-apk.py  build-apk.py  debug.sh  install-apk.py  meson.build  powder-jar.py  run-apk.py  sign-apk.py
android/cross/: aarch64.ini  arm.ini  armeabi-v7a.ini  x86.ini  x86_64.ini
android/res/: meson.build
data/: IntroText.h  IntroText_CN.h  Lang.h  Lang_CN.h  Shaders.h  ToArray.cpp  TrigTables.h  font.bz2  font.cpp  font.h  font2.h  hmap.cpp  hmap.h  icon.cpp  icon.h  icondoc.h  images.cpp  images.h  meson.build  to_array.py  wikidata.h
data/localization/: EN.cpp  List.h
resources/: Info.template.plist  MakeIco.cpp  appdata.template.xml  cats.data  cats.xcf  credits.json  document.icns  font.bz2  gencredits.py  icon.icns  make-ico.py  meson.build  powder-res.aps  powder-res.rc  powder-res.template.rc  powder.appdata.xml  powder.desktop  powder.man  powder.template.desktop  powdertoy-save.xml  resource.h  save.template.xml  save.xml  serve-wasm.template.py  to-array.py  winutf8.xml
resources/generated_icons/: README.md
resources/icon/: icontofile.py
src/: Activity.h  Air.cpp  BSON.c  Config.h  Config.template.h  Console.cpp  Console.h  Controller.h  E189_update.h  Format.cpp  Format.h  FpsLimit.h  FrameSchedule.h  GameSession.cpp  Global.cpp  Global.h  Graphics.cpp  Graphics.h  Misc.cpp  Misc.h  OpenGLGraphics.cpp  OpenGLHeaders.h  PixelMethods.inc  Platform.cpp  Platform.h  PowderToy.cpp  PowderToy.h  PowderToyFontEditor.cpp  PowderToyRenderer.cpp  PowderToySDL.cpp  PowderToySDL.h  PowderToySDLCommon.cpp  PowderToySDLEmscripten.cpp  Probability.cpp  Probability.h  RasterGraphics.cpp  Renderer.cpp  Renderer.h  SDLCompat.cpp  SDLCompat.h  (+38 more)
src/Resources/: Font-Data  Font-Pointers  powder-res.rc
src/audio/: AudioEngine.h  AudioEngineFake.cpp  AudioEngineReal.cpp  OffsetTable.h  Sound.cpp  Sound.h  meson.build
src/bson/: BSON.cpp  BSON.h  meson.build
src/bzip2/: bz2wrap.cpp  bz2wrap.h  meson.build
src/cajun/: elements.cpp  elements.h  elements.inl  reader.cpp  reader.h  reader.inl  visitor.h  writer.cpp  writer.h  writer.inl
src/cat/: CommandInterface.cpp  CommandInterface.h  LegacyLuaAPI.cpp  LuaBit.cpp  LuaBit.h  LuaButton.cpp  LuaButton.h  LuaCheckbox.cpp  LuaCheckbox.h  LuaComponent.cpp  LuaComponent.h  LuaLabel.cpp  LuaLabel.h  LuaLuna.h  LuaProgressBar.cpp  LuaProgressBar.h  LuaScriptHelper.h  LuaScriptInterface.cpp  LuaScriptInterface.h  LuaSlider.cpp  LuaSlider.h  LuaTextbox.cpp  LuaTextbox.h  LuaWindow.cpp  LuaWindow.h  TPTSTypes.cpp  TPTSTypes.h  TPTScriptInterface.cpp  TPTScriptInterface.h
src/client/: APIRequest.cpp  APIRequest.h  AuthUserCommon.cpp  AuthUserEmscripten.cpp  AvatarRequest.cpp  AvatarRequest.h  Client.cpp  Client.h  ClientListener.h  Comment.h  Download.cpp  Download.h  DownloadManager.cpp  DownloadManager.h  GameSave.cpp  GameSave.h  GetUserInfoRequest.cpp  GetUserInfoRequest.h  HTTP.cpp  HTTP.h  ImageRequest.cpp  ImageRequest.h  LoginInfo.h  MD5.cpp  MD5.h  RequestBroker.cpp  RequestBroker.h  RequestListener.h  SaveFile.cpp  SaveFile.h  SaveInfo.cpp  SaveInfo.h  SaveUserInfoRequest.cpp  SaveUserInfoRequest.h  Search.h  ServerNotification.h  StartupInfo.h  ThumbnailBroker.cpp  ThumbnailBroker.h  ThumbnailListener.h  (+10 more)
src/colourpicker/: ColourPickerActivity.cpp  ColourPickerActivity.h
src/common/: Assert.h  Bson.cpp  Bson.h  Defer.h  DependentFalse.h  ExplicitSingleton.h  Format.h  Geometry.h  Internationalization.cpp  Internationalization.h  Localization.h  OurVariant.h  Plane.h  Platform.cpp  Platform.h  PlatformAndroid.cpp  PlatformDarwin.cpp  PlatformLinux.cpp  PlatformNull.cpp  PlatformPosix.cpp  PlatformPowder.cpp  PlatformWindows.cpp  RasterGeometry.h  Singleton.h  String.cpp  String.h  VariantIndex.h  Vec2.h  Version.h  bz2wrap.cpp  macosx.h  meson.build  tpt-compat.h  tpt-inline.h  tpt-math.cpp  tpt-math.h  tpt-minmax.h  tpt-rand.cpp  tpt-rand.h  tpt-thread-local.cpp  (+2 more)
src/config/: meson.build
src/console/: ConsoleCommand.h  ConsoleController.cpp  ConsoleController.h  ConsoleModel.cpp  ConsoleModel.h  ConsoleView.cpp  ConsoleView.h
src/debug/: AirVelocity.cpp  AirVelocity.h  DebugInfo.h  DebugLines.cpp  DebugLines.h  DebugParts.cpp  DebugParts.h  ElementPopulation.cpp  ElementPopulation.h  ParticleDebug.cpp  ParticleDebug.h  SurfaceNormals.cpp  SurfaceNormals.h  meson.build
src/dialogues/: ConfirmPrompt.cpp  ConfirmPrompt.h  ErrorMessage.cpp  ErrorMessage.h  InformationMessage.cpp  InformationMessage.h  LegacyDialogues.h  TextPrompt.cpp  TextPrompt.h
src/elements/: .directory  C0.c  O2.c  O2.cpp  acel.c  acel.cpp  acid copy.c  acid.c  acid.cpp  acloud.c  acrn.c  agas.c  amtr.c  amtr.cpp  anar.c  anar.cpp  aray.c  aray.cpp  ash.c  bang.c  bang.cpp  bcln.c  bcln.cpp  bcol.c  bcol.cpp  bizr.c  bizr.cpp  bmtl.c  bmtl.cpp  bomb.c  bomb.cpp  box.c  boyl.c  boyl.cpp  brel.c  brmt.c  brmt.cpp  btry.c  btry.cpp  bull.c  (+242 more)
src/elementsearch/: ElementSearchActivity.cpp  ElementSearchActivity.h
src/filebrowser/: FileBrowserActivity.cpp  FileBrowserActivity.h
src/game/: BitmapBrush.h  Brush.cpp  Brush.h  DecorationTool.h  EllipseBrush.h  GameController.cpp  GameController.h  GameModel.cpp  GameModel.h  GameModelException.h  GameView.cpp  GameView.h  Menu.h  Notification.h  PropertyTool.cpp  QuickOption.h  QuickOptions.h  RenderPreset.h  SampleTool.cpp  SaveLoadException.h  SignTool.cpp  Tool.cpp  Tool.h  ToolButton.cpp  ToolButton.h  TriangleBrush.h
src/gui/: Style.h  (+4 more)
(+2317 files in other folders)
